// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operations selectors  - publicChannels 1`] = `
Object {
  "testaddress1": Object {
    "address": "testAddress1",
    "description": "sadadsdsadsa",
    "keys": Object {
      "ivk": "zivks14fgrxnk2f6qhtndxtc23cwy74kuyptq78qen9jq2ts2hnz0e7vrqazzyt1",
    },
    "minFee": "1",
    "name": "testname1",
    "onlyForRegistered": "0",
    "owner": "me",
    "timestamp": 0,
  },
  "testaddress2": Object {
    "address": "XXXX2",
    "description": "sadadsdsadsa",
    "keys": Object {
      "ivk": "zivks14fgrxnk2f6qhtndxtc23cwy74kuyptq78qen9jq2ts2hnz0e7vrqazzyt2",
    },
    "minFee": "12",
    "name": "testname2",
    "onlyForRegistered": "1",
    "owner": "you",
    "timestamp": 0,
  },
}
`;

exports[`operations selectors  - publicChannelsByAddress 1`] = `
Object {
  "address": "testAddress1",
  "description": "sadadsdsadsa",
  "keys": Object {
    "ivk": "zivks14fgrxnk2f6qhtndxtc23cwy74kuyptq78qen9jq2ts2hnz0e7vrqazzyt1",
  },
  "minFee": "1",
  "name": "testname1",
  "onlyForRegistered": "0",
  "owner": "me",
  "timestamp": 0,
}
`;
